src/styles.css
/* You can add global styles to this file, and also import other style files */
body {
    background-color: #F0F3F9;
}

h3 {
    font-family: 'Padauk', sans-serif;
}

body.dark-mode {
    background-color: #000000;
    color: #ffffff;
}

body.dark-mode a {
    color: #ffffff;
}
  
body.light-mode {
    background-color: #F0F3F9;
    color: #2d3436;
}

body:not(.dark-mode-preloading) {
    transition: all 0.3s linear;
}
  

